--- a/app/index.html
+++ b/app/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>MetaCoin - Truffle Webpack Demo w/ Frontend</title>
+  <title>PRANA - Decentralised Social Networking</title>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script type="text/javascript" src="../node_modules/truffle-contract/dist/truffle-contract.min.js"></script>
   <script src="./app.js"></script>
 </head>
 <body>
-  <h1>MetaCoin</h1>
-  <h2>Example Truffle Dapp</h2>
-  <h3>You have <span class="black"><span id="balance"></span> META</span></h3>
-
+  <h1>Prana</h1>
+  <br><h2>Decentralised social network dapp</h2>
   <br>
   <h1>Send MetaCoin</h1>
-  <br><label for="amount">Amount:</label><input type="text" id="amount" placeholder="e.g., 95"></input>
-  <br><label for="receiver">To Address:</label><input type="text" id="receiver" placeholder="e.g., 0x93e66d9baea28c17d9fc393b53e3fbdd76899dae"></input>
-  <br><br><button id="send" onclick="App.sendCoin()">Send MetaCoin</button>
-  <br><br>
-  <span id="status"></span>
+  <br><label for="amount">Enter message: </label><input type="text" id="amount" placeholder="e.g., This my first post!"></input>
   <br>
-  <span class="hint"><strong>Hint:</strong> open the browser developer console to view any errors and warnings.</span>
+  <br><br><button id="send">Post</button> 
+  <br><br><button id="getPost">Get my posts</button>
+  <br><p id="post"></p>
 </body>
 </html>
